--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -20,6 +20,6 @@ jobs:
     - name: Install dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build "Synergy.VirusPrototype.CrossPlatformDesktop.csproj" --configuration Release --no-restore
+      run: dotnet build '**/src/Synergy.VirusPrototype.CrossPlatformDesktop/Synergy.VirusPrototype.CrossPlatformDesktop.csproj' --configuration Release --no-restore
     - name: Test
       run: dotnet test --no-restore --verbosity normal
