--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  CrossPlatformProject: 'src\platforms\Synergy.VirusPrototype.CrossPlatformDesktop\Synergy.VirusPrototype.CrossPlatformDesktop.csproj'
+
 jobs:
   build:
 
@@ -20,6 +23,6 @@ jobs:
     - name: Install dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build '**/src/Synergy.VirusPrototype.CrossPlatformDesktop/Synergy.VirusPrototype.CrossPlatformDesktop.csproj' --configuration Release --no-restore
+      run: dotnet build ${{env.CrossPlatformProject}} --configuration Release --no-restore
     - name: Test
       run: dotnet test --no-restore --verbosity normal
