--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   CrossPlatformProject: 'src/platforms/Synergy.VirusPrototype.CrossPlatformDesktop/Synergy.VirusPrototype.CrossPlatformDesktop.csproj'
-  SharedUnitTestProject: 'src/test/Synergy.VirusPrototype.Shared.Tests.Unit/Synergy.VirusPrototype.Shared.Tests.Unit.csproj'
+  SharedUnitTestProject: 'test/Synergy.VirusPrototype.Shared.Tests.Unit/Synergy.VirusPrototype.Shared.Tests.Unit.csproj'
 
 jobs:
   build:
