--- a/.editorconfig
+++ b/.editorconfig
@@ -355,6 +355,8 @@ dotnet_diagnostic.SA1649.severity = error
 # SA1652:
 dotnet_diagnostic.SA1652.severity = none
 
+# SA1508: Closing braces should not be preceded by blank line
+dotnet_diagnostic.SA1508.severity = error
 
 #### CSxxxx ####
 
