--- a/src/Synergy.VirusPrototype.Resources/Synergy.VirusPrototype.Resources.csproj
+++ b/src/Synergy.VirusPrototype.Resources/Synergy.VirusPrototype.Resources.csproj
@@ -5,7 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="MenuTexts.bg.resx">
+    <Compile Update="CodeErrors.Designer.cs">
+      <DependentUpon>CodeErrors.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="CodeErrors.resx">
+      <LastGenOutput>CodeErrors.Designer.cs</LastGenOutput>
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
   </ItemGroup>
