--- a/.editorconfig
+++ b/.editorconfig
@@ -217,6 +217,7 @@ dotnet_analyzer_diagnostic.severity = none
 dotnet_diagnostic.CA1001.severity = warning
 # CA1008: Enums should have zero value
 dotnet_diagnostic.CA1008.severity = error
+dotnet_diagnostic.CA1717.severity = error
 dotnet_diagnostic.CA1009.severity = warning
 dotnet_diagnostic.CA1012.severity = warning
 dotnet_diagnostic.CA1016.severity = warning
@@ -335,7 +336,7 @@ dotnet_diagnostic.SA1310.severity = none
 dotnet_diagnostic.SA1312.severity = error
 
 # SA1413: use triling comma in multi-line initializers
-dotnet_diagnostic.SA1413.severity = warning
+dotnet_diagnostic.SA1413.severity = error
 
 # SA1500:
 dotnet_diagnostic.SA1500.severity = error
@@ -1263,7 +1264,7 @@ dotnet_diagnostic.S4016.severity = error
 dotnet_diagnostic.S4017.severity = error
 
 # S4018: Generic methods should provide type parameters
-dotnet_diagnostic.S4018.severity = error
+dotnet_diagnostic.S4018.severity = warning
 
 # S4019: Base class methods should not be hidden
 dotnet_diagnostic.S4019.severity = error
@@ -1272,7 +1273,7 @@ dotnet_diagnostic.S4019.severity = error
 dotnet_diagnostic.S4022.severity = error
 
 # S4023: Interfaces should not be empty
-dotnet_diagnostic.S4023.severity = error
+dotnet_diagnostic.S4023.severity = suggestion
 
 # S4025: Child class fields should not differ from parent class fields only by capitalization
 dotnet_diagnostic.S4025.severity = error
@@ -1299,7 +1300,7 @@ dotnet_diagnostic.S4041.severity = error
 dotnet_diagnostic.S4047.severity = error
 
 # S4049: Properties should be preferred
-dotnet_diagnostic.S4049.severity = error
+dotnet_diagnostic.S4049.severity = suggestion
 
 # S4050: Operators should be overloaded consistently
 dotnet_diagnostic.S4050.severity = error
