--- a/src/Synergy.VirusPrototype.Shared/Synergy.VirusPrototype.Shared.csproj
+++ b/src/Synergy.VirusPrototype.Shared/Synergy.VirusPrototype.Shared.csproj
@@ -1,13 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <CodeAnalysisRuleSet>..\..\code-analysis\synergy-ca.ruleset</CodeAnalysisRuleSet>
     <LangVersion>9.0</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
   <ItemGroup>
     <None Remove="appsettings.json" />
     <None Remove="Content\2d\SmallKnightRun.xnb" />
     <None Remove="Content\Fonts\gameFont.xnb" />
+    <None Remove="Content\Fonts\Sprocket-BT_42023.ttf" />
+    <None Remove="Content\Fonts\Sprocket.spritefont" />
+    <None Remove="Content\Fonts\Sprocket.xnb" />
   </ItemGroup>
 
   <ItemGroup>
@@ -15,13 +20,6 @@
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <AdditionalFiles Include="..\..\code-analysis\synergy.json" Link="stylecop.json">
-      <ExcludeFromSourceAnalysis>True</ExcludeFromSourceAnalysis>
-      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
-    </AdditionalFiles>
   </ItemGroup>
 
   <ItemGroup>
@@ -41,6 +39,15 @@
     <Content Include="Content\Fonts\gameFont.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\Fonts\Sprocket-BT_42023.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Fonts\Sprocket.spritefont">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Fonts\Sprocket.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   
   <ItemGroup>
@@ -53,8 +60,7 @@
     <Folder Include="Content\Audio\" />
     <Folder Include="Features\" />
     <Folder Include="Properties\" />
-    <Folder Include="Scenes\Abstract\" />
-    <Folder Include="Scenes\Game\" />
+    <Folder Include="Scenes\Enums\" />
   </ItemGroup>
 
 </Project>
