--- a/src/Synergy.VirusPrototype.Shared/appsettings.json
+++ b/src/Synergy.VirusPrototype.Shared/appsettings.json
@@ -1,3 +1,29 @@
 {
-  "Ping": "Pong"
+  "Ping": "Pong",
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "restrictedToMinimumLevel": "Information",
+          "path": "Logs/log-.txt",
+          "rollingInterval": "Day",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter",
+          "buffered": true
+        }
+      }
+    ],
+    "Properties": {
+      "Application": "Synergy.VirusPrototype.Shared"
+    }
+  }
 }
