--- a/src/Synergy.VirusPrototype.Domain.Models/Synergy.VirusPrototype.Domain.Models.csproj
+++ b/src/Synergy.VirusPrototype.Domain.Models/Synergy.VirusPrototype.Domain.Models.csproj
@@ -5,6 +5,7 @@
     <CodeAnalysisRuleSet>..\..\code-analysis\synergy-ca.ruleset</CodeAnalysisRuleSet>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
+    <WarningsAsErrors>CS8600;CS8602;CS8603;CS8620;CS8613;CS8629;CS8625;CS8619;CS8614;CS8604;CS8601;CS8714;CS8653;CS8634</WarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup Label="Analyzers">
