--- a/src/Synergy.VirusPrototype.Shared/Synergy.VirusPrototype.Shared.csproj
+++ b/src/Synergy.VirusPrototype.Shared/Synergy.VirusPrototype.Shared.csproj
@@ -6,7 +6,9 @@
     <Nullable>enable</Nullable>
     <WarningsAsErrors>CS8600;CS8602;CS8603;CS8620;CS8613;CS8629;CS8625;CS8619;CS8614;CS8604;CS8601;CS8714;CS8653;CS8634</WarningsAsErrors>
   </PropertyGroup>
+
   <ItemGroup>
+    <None Remove="Content\2d\red-pixel.xnb" />
     <None Remove="Content\Fonts\default_font.fnt" />
     <None Remove="Content\Fonts\OpenSans-Bold.ttf" />
   </ItemGroup>
@@ -27,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Synergy.VirusPrototype.Core\Synergy.VirusPrototype.Core.csproj" />
     <ProjectReference Include="..\Synergy.VirusPrototype.Infrastructure\Synergy.VirusPrototype.Infrastructure.csproj" />
     <ProjectReference Include="..\Synergy.VirusPrototype.Resources\Synergy.VirusPrototype.Resources.csproj" />
     <ProjectReference Include="..\Synergy.VirusPrototype.Services\Synergy.VirusPrototype.Services.csproj" />
@@ -43,6 +46,9 @@
     <EmbeddedResource Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
+    <Content Include="Content\2d\red-pixel.xnb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\2d\SmallKnightRun.xnb">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -56,6 +62,7 @@
  
   
   <ItemGroup>
+    <Folder Include="Builders\" />
     <Folder Include="Content\Audio\" />
     <Folder Include="Features\" />
     <Folder Include="Properties\" />
