--- a/src/Synergy.VirusPrototype.Core/Synergy.VirusPrototype.Core.csproj
+++ b/src/Synergy.VirusPrototype.Core/Synergy.VirusPrototype.Core.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Controls\Grid\" />
     <Folder Include="Views\Abstract\" />
   </ItemGroup>
 
